2002-03-27  Mark Mitchell  <mark@codesourcery.com>

	PR c++/4884
	* call.c (build_op_delete_call): Allow for the fact the placement
	may be a COMPOUND_EXPR.
	
2002-03-26  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/5682
	* cp-tree.h (BINFO_PRIMARY_P): Explain meaning better.
	(dfs_skip_nonprimary_vbases_unmarkedp): Remove.
	(dfs_skip_nonprimary_vbases_markedp): Remove.
	* search.c (get_shared_vbase_if_not_primary): Remove.
	(dfs_skip_nonprimary_vbases_unmarkedp): Remove.
	(dfs_skip_nonprimary_vbases_markedp): Remove.
	(dfs_unmarked_real_bases_queue_p): Just get the canonical binfo.
	(dfs_marked_real_bases_queue_p): Likewise.

2002-03-26  Mark Mitchell  <mark@codesourcery.com>

	PR c++/4884
	* init.c (build_new_1): Allow for the fact the result of
	build_function_call may be a COMPOUND_EXPR.

2002-03-25  Jakub Jelinek  <jakub@redhat.com>

	PR c++/6037
	* decl.c (start_enum): Don't set TREE_ADDRESSABLE on TREE_LIST node.

2002-03-22  Jeff Knaggs  <jknaggs@redhat.com>

	* typeck.c (expand_ptrmemfunc_cst): Scale idx down to an index
	into the vtable_entry array regardless of
	TARGET_PTRMEMFUNC_VBIT_LOCATION.

2002-03-21  Aldy Hernandez  <aldyh@redhat.com>

        * tree.c (cp_cannot_inline_tree_fn): Same.

2002-03-20  Jason Merrill  <jason@redhat.com>

	PR c++/2136
	* init.c (build_delete): Check access for a member op delete here.
	* decl2.c (delete_sanity): Not here.

2002-03-19  Jason Merrill  <jason@redhat.com>

	PR c++/5118
	* class.c (get_vfield_name): Use the constructor_name.

2002-03-18  Eric Botcazou  <ebotcazou@multimania.com>

	PR c++/3882
	* pt.c (tsubst_decl): Move __PRETTY_FUNCTION__ handling...
	(tsubst_expr) [DECL_STMT]: ...here. And substitute the initializer
	only after recording the declaration.

2002-03-18  Ashif Harji  <asharji@uwaterloo.ca>

	* lang-specs.h (compiler default_compilers): Add   
	-no-integrated-cpp flag to invoke an external cpp.

2002-03-18  Jason Merrill  <jason@redhat.com>

	PR c++/2039