@@ -1,3 +1,9 @@
+2002-03-29  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/6073
+	* class.c (finish_struct_1): Update static field's DECL_MODE even
+	if its type is a variant of t.
+
 2002-03-27  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/4884
